# Feta

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLibSodium.cmake  FindQuickFIX.cmake
config/: FIXCoinCOnfig.xml  FIXConfig.xml
include/common/: types.h
include/market_data/: fix_order_book.h
include/net/: ed25519_signer.h  fix_engine.h  fix_parser.h
src/: main.cpp
src/common/: lockfree_spsc_queue.h  types.h
src/market_data/: CMakeLists.txt  fix_order_book.cpp  fix_order_book.h  fix_parser.cpp  fix_parser.h
src/net/: CMakeLists.txt  ed25519_signer.cpp  ed25519_signer.h  fix_engine.cpp  fix_engine.h  fix_gateway.h  fix_parser.cpp
tests/unit/: test_fix_engine.cpp  test_fix_order_book.cpp  test_fix_parser.cpp
